--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@ngrx/store": "^10.1.2",
+    "@ngrx/store-devtools": "^10.1.2",
     "rxjs": "~6.6.0",
+    "todomvc-app-css": "^2.3.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
